# RMI

./: .drone.yml  .gitignore  Cargo.toml  README.md  model_probe.ipynb  optimizer.sh  pareto.ipynb  results.json  step1.json
optimizer/: .gitignore  Makefile  Untitled.ipynb  bench.cpp  build_demo_cache.py  demo.py  main.py  measure_linvbin.cpp  model_probe.ipynb  pareto.ipynb
optimizer/SOSD/: benchmark.cc  benchmark.cc.mustache  benchmark.h  util.h
optimizer/SOSD/scripts/: prepare.sh
optimizer/static/: cdfgraph.js  globalLoader.js  index.html  index.js  inspector.js  measure_table.js  optimizer.html  optimizer.js  style.css
optimizer/static/osm_cellids_200M_uint64/: step1_out.csv  step2_out.csv  step3_out.csv  step4_out.csv
rmi_lib/: Cargo.toml
rmi_lib/src/: cache_fix.rs  codegen.rs  lib.rs  optimizer.rs
rmi_lib/src/models/: bottom_up_plr.rs  histogram.rs  linear.rs  mod.rs  radix.rs  utils.rs
src/: codegen.rs  lib.rs  load.rs  main.rs  optimizer.rs  train.rs
src/models/: balanced_radix.rs  bottom_up_plr.rs  cubic_spline.rs  histogram.rs  linear.rs  linear_spline.rs  mod.rs  normal.rs  pgm.rs  radix.rs  stdlib.rs  utils.rs
src/train/: lower_bound_correction.rs  mod.rs  multi_layer.rs  two_layer.rs
tests/: .gitignore  Makefile  report.py
tests/cache_fix/: Makefile
tests/cache_fix_osm/: Makefile
tests/cache_fix_wiki/: Makefile
tests/kv_test/: .gitignore  Makefile  main.cpp  mmap_struct.h  result_all.sh  train_all.sh
tests/radix_model_wiki/: Makefile
tests/simple_model/: Makefile
tests/simple_model_osm/: Makefile
(+4 files in other folders)
